// Vitest Snapshot v1

exports[`multiline 1`] = `
"
  Hello
    World
"
`;

exports[`object 1`] = `
{
  "this": {
    "is": Set {
      "of",
      "snapshot",
    },
  },
}
`;

exports[`properties snapshot 1`] = `
{
  "createdAt": Any<Date>,
  "id": Any<Number>,
  "name": StringContaining "LeBron",
}
`;

exports[`renders mock snapshot 1`] = `[MockFunction spy]`;

exports[`renders mock snapshot 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "hello",
      "world",
      2,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`throwing 1`] = `"omega"`;

exports[`throwing 2`] = `"omega"`;

exports[`throwing 3`] = `
{
  "error": "omega",
}
`;

exports[`throwing 4`] = `"omega"`;

exports[`with big array 1`] = `
{
  "this": {
    "is": Set {
      "one",
      [
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
        {},
      ],
    },
  },
}
`;

exports[`with big string 1`] = `
{
  "this": {
    "is": Set {
      "one",
      "zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo,zoo",
    },
  },
}
`;
